packages/jsts/tests/dbd/benchmark/TypeError/T13 X is not a non-null object/T13-01/reproducer.js
const mergeInto = {};
const prop = 'foo';
const mergeFrom = {};

Object.defineProperty(mergeInto, prop, Object.getOwnPropertyDescriptor(Object(mergeFrom), prop)); // Noncompliant: Object.getOwnPropertyDescriptor(Object(mergeFrom), prop) can return undefined
